Fixed overflow issue

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -22,10 +22,6 @@ h1, h2, h3, h4 {
     line-height: 1;
 }
 
-.h50 {
-    height: 50%
-}
-
 .flex-column {
     display: flex;
     flex-direction: column;
